--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   firebase_core: ^3.6.0
   google_maps_flutter: ^2.9.0
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -19,3 +20,11 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/images/
+
+flutter_native_splash:
+  color: "#ffffff" # Cor de fundo
+  image: assets/images/vecteezy_uber-logo-png-uber-icon-transparent-png_27127451.png # Caminho para a imagem de splash
+  android: true # Para incluir Android
+  ios: true # Para incluir iOS
