--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   firebase_core: ^3.6.0
+  firebase_auth: ^5.3.1
   google_maps_flutter: ^2.9.0
   flutter_native_splash: ^2.4.1
 
