--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   geolocator: ^13.0.1
   geocoding: ^3.0.0
   flutter_polyline_points: ^2.1.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
